<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.tesis</groupId>
	<artifactId>TeamSoft</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>TeamSoft</name>
	<description>TeamSoft</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>

		</dependency>

		<dependency>
			<groupId>edu.tu-universidad</groupId>
			<artifactId>BiCIAM</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/BiCIAM-MultObj.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Knife4j OpenAPI3 -->
		<dependency>
			<groupId>com.github.xiaoymin</groupId>
			<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
			<version>4.4.0</version>
		</dependency>

		<!--  Spring Data JPA  -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- Mapper -->
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>3.2.4</version>
		</dependency>

		<!--       &lt;!&ndash; Spring Security &ndash;&gt; -->
		<!--       <dependency> -->
		<!--         <groupId>org.springframework.boot</groupId> -->
		<!--         <artifactId>spring-boot-starter-security</artifactId> -->
		<!--       </dependency> -->
		<!--       &lt;!&ndash; JWT para autenticación &ndash;&gt; -->
		<!--       <dependency> -->
		<!--         <groupId>io.jsonwebtoken</groupId> -->
		<!--         <artifactId>jjwt-api</artifactId> -->
		<!--         <version>0.11.5</version> -->
		<!--       </dependency> -->
		<!--       <dependency> -->
		<!--         <groupId>io.jsonwebtoken</groupId> -->
		<!--         <artifactId>jjwt-impl</artifactId> -->
		<!--         <version>0.11.5</version> -->
		<!--         <scope>runtime</scope> -->
		<!--       </dependency> -->
		<!--       <dependency> -->
		<!--         <groupId>io.jsonwebtoken</groupId> -->
		<!--         <artifactId>jjwt-jackson</artifactId> -->
		<!--         <version>0.11.5</version> -->
		<!--         <scope>runtime</scope> -->
		<!--       </dependency> -->
		<!--       &lt;!&ndash; Para encriptación de contraseñas &ndash;&gt; -->
		<!--       <dependency> -->
		<!--         <groupId>org.springframework.security</groupId> -->
		<!--         <artifactId>spring-security-crypto</artifactId> -->
		<!--       </dependency> -->
		<!--       &lt;!&ndash; Para pruebas de seguridad &ndash;&gt; -->
		<!--       <dependency> -->
		<!--         <groupId>org.springframework.security</groupId> -->
		<!--         <artifactId>spring-security-test</artifactId> -->
		<!--         <scope>test</scope> -->
		<!--       </dependency> -->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<includeSystemScope>true</includeSystemScope>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
